<resources>
    <!-- Nombre de la aplicación -->
    <string name="app_name">HealthConnect</string>

    <!-- Textos para MainActivity -->
    <string name="welcome_message">Bienvenido a HealthConnect</string>
    <string name="start_button_text">Iniciar Registro</string>

    <!-- Textos para RegistrationActivity -->
    <string name="registration_title">Formulario de Inscripción</string>
    <string name="name_hint">Nombre</string>
    <string name="age_hint">Edad</string>
    <string name="email_hint">Correo Electrónico</string>
    <string name="specialty_hint">Especialidad</string>
    <string name="submit_button_text">Submit</string>

    <!-- Textos para ConfirmationActivity -->
    <string name="confirmation_title">Confirmación de Inscripción</string>
    <string name="confirmation_message">Gracias por registrarte, estos son tus datos:</string>
</resources>
