<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent" android:layout_height="48dp"
    android:autofillHints=""
    android:hint="@string/name_hint"
    android:inputType="textPersonName" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
    android:autofillHints=""
    android:hint="@string/age_hint"
    android:inputType="number" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"  android:autofillHints=""
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/specialtyEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/specialty_hint"
        android:inputType="text" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button_text" />

</LinearLayout>
